cambio de nombres (no completo)

--- a/planner/setup.cfg
+++ b/planner/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/planificador
+script_dir=$base/lib/planner
 [install]
-install_scripts=$base/lib/planificador
+install_scripts=$base/lib/planner
