--- a/syst_msgs/CMakeLists.txt
+++ b/syst_msgs/CMakeLists.txt
@@ -27,6 +27,7 @@ endif()
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/AdvService.srv"
   "msg/Waypoints.msg"
+  "msg/DronesList.msg"
 )
 
 ament_package()
